<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rabi.com.cgpagarbage.Splash"
    android:background="@color/common_google_signin_btn_text_dark_default">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cgpa"
        android:id="@+id/cgpa_splash"
        android:textSize="50sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:typeface="normal"
        android:lineSpacingExtra="10sp"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/garbage"
        android:id="@+id/textView2"
        android:textSize="18sp"
        android:layout_below="@+id/cgpa_splash"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/circle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/circle"
        android:src="@drawable/appicon2"/>

</RelativeLayout>
