<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e33935"
    tools:context="rabi.com.cgpagarbage.SettingsActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/Change_password"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="174dp"
        android:background="#fd9f01"
        android:text="@string/change_password"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginTop="37dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8214682059604559/1201764027"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </com.google.android.gms.ads.AdView>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:background="?android:attr/colorPressedHighlight"
        android:textColorHint="@android:color/white"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/adView">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:maxLines="1"
            android:textColor="@android:color/white"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="?android:attr/colorPressedHighlight"
        android:textColorHint="@android:color/white"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/Change_password"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"/>
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>
