<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".advisor.AdvisorActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize,UselessParent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp">

                <TextView
                    android:id="@+id/mc_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/mCgPa"
                    android:layout_alignLeft="@+id/mCgPa"
                    android:layout_alignTop="@+id/mCgPa"
                    android:fontFamily="sans-serif"
                    android:text="Your CGPA"
                    android:textColor="@color/common_google_signin_btn_text_light_default"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:text="130"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/mCgPa"
                    android:layout_alignRight="@+id/mCgPa"
                    android:layout_alignEnd="@+id/mCgPa"
                    android:id="@+id/metcredit"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/common_google_signin_btn_text_light_default"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/mtotalCre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/metcredit"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_toStartOf="@+id/metcredit"
                    android:layout_toLeftOf="@+id/metcredit"
                    android:fontFamily="sans-serif"
                    android:text="@string/credit"
                    android:textAlignment="center"
                    android:textColor="@color/common_google_signin_btn_text_light_default"
                    android:textSize="18sp" />

                <TextView
                    android:text="0.00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mCgPa"
                    android:textAlignment="center"
                    android:textSize="150sp"
                    android:fontFamily="sans-serif"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/common_google_signin_btn_text_light_default"
                    tools:ignore="HardcodedText" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/liL"
                    android:background="#f44336">

                    <EditText
                        android:id="@+id/targetCGPA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:width="120dp"
                        android:gravity="center"
                        android:hint="@string/insert_your_target_cgpa"
                        android:inputType="numberDecimal"
                        android:maxLength="4"
                        android:maxLines="1"
                        android:textColor="#fff"
                        android:textColorHint="#fff"
                        android:autofillHints="" tools:targetApi="o" />

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/liL"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/lil2"
                    android:background="#ffc107">

                    <Button
                        android:id="@+id/retake_only"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="#ffc107"
                        android:onClick="onRETAKEonly"
                        android:text="Retake Only"
                        android:textColor="#fff"
                        tools:ignore="ButtonStyle,HardcodedText" />

                    <Button
                        android:id="@+id/re_and_new"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="#ffa000"
                        android:onClick="onNEWandRETAKE"
                        android:text="Retake And New"
                        android:textColor="#fff"
                        tools:ignore="ButtonStyle,HardcodedText" />

                    <Button
                        android:id="@+id/new_only"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:background="#ffc107"
                        android:onClick="onNEWonly"
                        android:text="New Only"
                        android:textColor="#fff"
                        tools:ignore="ButtonStyle,HardcodedText" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/lil2"
                    android:id="@+id/lil3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/Course"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="138dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/credit"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="Target Grade"
                        android:textSize="18sp" />
                </LinearLayout>

                <ListView
                    android:id="@+id/listviewForList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/lil3"
                    tools:ignore="NestedScrolling" />

            </RelativeLayout>

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/app_name" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>